--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -50,6 +50,7 @@
   --taupe-hex: #463930ff;
   --molten-lava-hex: #790c01ff;
   --soft-linen-hex: #f5f0e6ff;
+  --lys-beige-hex: #fefbf5ff;
 }
 
 /* ============================
